--- a/bundle/client/index.html
+++ b/bundle/client/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>web starter app</title>
-    <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="icon" type="image/png" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
 <section>
     <div id="main" class="container-fluid"></div>
 </section>
 
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
