--- a/bundle/client/index.html
+++ b/bundle/client/index.html
@@ -4,6 +4,7 @@
     <title>web starter app</title>
     <link rel="icon" type="image/png" href="/img/favicon.ico">
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
